syntax = "proto3";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option objc_class_prefix = "HLW";

package indevicecommunication;

service InDeviceCommunication {
  rpc ReportMsvcStart(ProcessData) returns (ProcessData) {}
  rpc UpdateSender(Connection) returns (google.protobuf.Empty) {}
  rpc UpdateBatchSize(Int32) returns (google.protobuf.Empty) {}
  rpc UpdateResolution(Dimensions) returns (google.protobuf.Empty) {}
  rpc UpdateTimeKeeping(TimeKeeping) returns (google.protobuf.Empty) {}
  rpc SyncDatasources(Int32) returns (google.protobuf.Empty) {}
  rpc SetStartFrame(Int32) returns (google.protobuf.Empty) {}
  rpc StopExecution(Signal) returns (google.protobuf.Empty) {}
}

message Signal {
  bool forced = 1;
}

message Connection {
  int32 mode = 1;
  string name = 2;
  string ip = 3;
  int32 port = 4;
}

message TimeKeeping {
  int32 slo = 1;
  uint64 time_budget = 3;
  uint64 start_time = 4;
  uint64 end_time = 5;
  uint64 local_duty_cycle = 6;
  uint64 cycle_start_time = 7;
}

message Dimensions {
  int32 channels = 1;
  int32 height = 2;
  int32 width = 3;
}

message ProcessData {
  string msvc_name = 1;
  uint32 pid = 2;
}

message Int32 {
  int32 value = 1;
}